--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   uuid: ^4.2.1
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
