--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application
+<!-- Storage -->
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+	
+	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+	<uses-permission android:name="android.permission.READ_MEDIA_VIDEOS"/>
+	<uses-permission android:name="android.permission.MANAGE_MEDIA"/>
+
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FILE_LOCATION"/>
+
+	<!-- Camera -->
+	<uses-permission android:name="android.permission.CAMERA"/>
+    
+	<application
         android:label="photon"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
