--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^11.0.1
   uuid: ^4.2.1
   qr_code_scanner: ^1.0.1
+  http: 1.1.0
 
 dev_dependencies:
   flutter_test:
