--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   http: 1.1.0
   dio: ^5.4.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
